Fully gotten rid of queue tables and now used message bus to communicate with CD servers.

--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -12,7 +12,7 @@
     <pipelines>
       <initialize>
         <processor type="Foundation.HtmlCache.Pipelines.InitializePersistedHtmlCache, Foundation.HtmlCache" method="Initialize" role:require="Standalone or ContentDelivery" />
-        <processor type="Foundation.HtmlCache.Pipelines.InitializeRemoteEventSubscriptions, Foundation.HtmlCache" method="Initialize" role:require="Standalone or ContentDelivery" />
+        <processor type="Foundation.HtmlCache.Pipelines.InitializeServiceBus, Foundation.HtmlCache" resolve="true" />
       </initialize>
       <mvc.requestBegin>
         <processor
@@ -73,15 +73,12 @@
         <handler type="Foundation.HtmlCache.Events.ClearCacheSite, Foundation.HtmlCache" method="Clear" role:require="Standalone or ContentDelivery" />
       </event>
     </events>
-    <!-- <scheduling> -->
-    <!--   <agent type="Foundation.HtmlCache.Agents.HtmlCacheQueueAgent, Foundation.HtmlCache" method="ProcessCacheQueue" interval="00:00:10" role:require="Standalone or ContentManagement" /> -->
-    <!-- </scheduling> -->
     <controlSources>
       <source mode="on" namespace="Foundation.HtmlCache.Controls" assembly="Foundation.HtmlCache" prefix="Foundation.HtmlCache"/>
     </controlSources>
     <Messaging>
       <Rebus>
-        <Foundation.HtmlCache.BroadcastHtmlCache>
+        <Foundation.HtmlCache.Messaging.Bus.BroadcastHtmlCacheBus>
           <Transport>
             <AzureServiceBus messagingTransport:require="AzureServiceBus">
               <OneWay role:require="Standalone or ContentDelivery">false</OneWay>
@@ -100,10 +97,10 @@
           <Routing>
             <TypeBasedMappings>
               <TypeMappings>
-                <CDCDBroadcastHtmlCacheMapping>
-                  <Type>Sitecore.Marketing.Automation.Messaging.Messages.PurgeFromCampaignMessage, Sitecore.Marketing.Automation</Type>
+                <BroadcastHtmlCacheMapping>
+                  <Type>Foundation.HtmlCache.Messaging.Message.BroadcastHtmlCacheMessage, Foundation.HtmlCache</Type>
                   <DestinationQueue>HCQ</DestinationQueue>
-                </CDCDBroadcastHtmlCacheMapping>
+                </BroadcastHtmlCacheMapping>
               </TypeMappings>
             </TypeBasedMappings>
           </Routing>
@@ -117,7 +114,7 @@
             </SimpleRetryStrategy>
           </Options>
           <Logging Type="Sitecore.Messaging.SitecoreLoggerFactory, Sitecore.Messaging"/>
-        </Foundation.HtmlCache.BroadcastHtmlCache>
+        </Foundation.HtmlCache.Messaging.Bus.BroadcastHtmlCacheBus>
       </Rebus>
     </Messaging>
   </sitecore>
