--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -34,6 +34,9 @@
         <processor
           type="Foundation.HtmlCache.Pipelines.SaveToPersistantCache, Foundation.HtmlCache"
           patch:after="processor[@type='Foundation.HtmlCache.Pipelines.EndTrackingContext, Foundation.HtmlCache']" role:require="Standalone or ContentDelivery" />
+        <processor
+          type="Foundation.HtmlCache.Pipelines.BroadcastHtmlCache, Foundation.HtmlCache"
+          patch:after="processor[@type='Foundation.HtmlCache.Pipelines.SaveToPersistantCache, Foundation.HtmlCache']" role:require="Standalone or ContentDelivery" />
       </mvc.requestEnd>
       <group name="itemProvider" groupName="itemProvider">
         <pipelines>
@@ -94,6 +97,17 @@
               <InputQueueName>HCQ</InputQueueName>
             </SqlServer>
           </Transport>
+          <Subscriptions>
+            <SqlServer>
+              <!--Set of credentials for proper connection to database-->
+              <ConnectionStringOrName>messaging</ConnectionStringOrName>
+              <!--The name of the table which saves the information about the relationships between queues and messages-->
+              <TableName>Sitecore_Subscriptions</TableName>
+              <!--Means that both subscribers and publishers have access to the same central subscription storage-->
+              <IsCentralized>true</IsCentralized>
+              <RetryerName>ExponentialRetryer</RetryerName>
+            </SqlServer>
+          </Subscriptions>
           <Routing>
             <TypeBasedMappings>
               <TypeMappings>
@@ -117,5 +131,8 @@
         </Foundation.HtmlCache.Messaging.Bus.BroadcastHtmlCacheBus>
       </Rebus>
     </Messaging>
+    <services>
+      <configurator type="Foundation.HtmlCache.Messaging.Subscription.ServicesConfigurator, Foundation.HtmlCache" role:require="Standalone or ContentDelivery"/>
+    </services>
   </sitecore>
 </configuration>
