--- a/code/packages.config
+++ b/code/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.4.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.1.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net462" />
   <package id="Sitecore.Framework.Messaging.Abstractions" version="4.0.1" targetFramework="net472" />
   <package id="Sitecore.Framework.Messaging.Configuration" version="4.0.1" targetFramework="net472" />
