--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -79,6 +79,9 @@
     <controlSources>
       <source mode="on" namespace="Foundation.HtmlCache.Controls" assembly="Foundation.HtmlCache" prefix="Foundation.HtmlCache"/>
     </controlSources>
+    <services>
+      <register serviceType="Sitecore.Framework.Messaging.IMessageHandler`1[[Foundation.HtmlCache.Messaging.Message.BroadcastHtmlCacheMessage, Foundation.HtmlCache]], Sitecore.Framework.Messaging.Abstractions" implementationType="Foundation.HtmlCache.Messaging.Handlers.BroadcastHtmlCacheHandler, Foundation.HtmlCache" lifetime="Transient" />
+    </services>
     <Messaging>
       <Rebus>
         <Foundation.HtmlCache.Messaging.Bus.BroadcastHtmlCacheBus>
@@ -88,15 +91,16 @@
               <OneWay role:require="ContentManagement">true</OneWay>
               <ConnectionStringOrName>messaging</ConnectionStringOrName>
               <Mode>Standard</Mode>
-              <InputQueueName>HCQ</InputQueueName>
+              <InputQueueName>HtmlCacheQueue_Subscriber</InputQueueName>
             </AzureServiceBus>
             <SqlServer messagingTransport:require="SQL">
               <OneWay role:require="Standalone or ContentDelivery">false</OneWay>
               <OneWay role:require="ContentManagement">true</OneWay>
               <ConnectionStringOrName>messaging</ConnectionStringOrName>
-              <InputQueueName>HCQ</InputQueueName>
+              <InputQueueName>HtmlCacheQueue_Subscriber</InputQueueName>
             </SqlServer>
           </Transport>
+
           <Subscriptions>
             <SqlServer>
               <!--Set of credentials for proper connection to database-->
@@ -108,31 +112,18 @@
               <RetryerName>ExponentialRetryer</RetryerName>
             </SqlServer>
           </Subscriptions>
-          <Routing>
-            <TypeBasedMappings>
-              <TypeMappings>
-                <BroadcastHtmlCacheMapping>
-                  <Type>Foundation.HtmlCache.Messaging.Message.BroadcastHtmlCacheMessage, Foundation.HtmlCache</Type>
-                  <DestinationQueue>HCQ</DestinationQueue>
-                </BroadcastHtmlCacheMapping>
-              </TypeMappings>
-            </TypeBasedMappings>
-          </Routing>
-          <Options>
-            <SetNumberOfWorkers>1</SetNumberOfWorkers>
-            <SetMaxParallelism>1</SetMaxParallelism>
-            <SimpleRetryStrategy>
-              <ErrorQueueAddress>Error</ErrorQueueAddress>
-              <MaxDeliveryAttempts>1</MaxDeliveryAttempts>
-              <SecondLevelRetriesEnabled>false</SecondLevelRetriesEnabled>
-            </SimpleRetryStrategy>
-          </Options>
+
+          <Subscribers role:require="Standalone or ContentDelivery">
+            <TypeMappings>
+              <BroadcastHtmlCacheMapping>
+                <Type>Foundation.HtmlCache.Messaging.Message.BroadcastHtmlCacheMessage, Foundation.HtmlCache</Type>
+                <PublisherQueue>HtmlCacheQueue_Subscriber</PublisherQueue>
+              </BroadcastHtmlCacheMapping>
+            </TypeMappings>
+          </Subscribers>
           <Logging Type="Sitecore.Messaging.SitecoreLoggerFactory, Sitecore.Messaging"/>
         </Foundation.HtmlCache.Messaging.Bus.BroadcastHtmlCacheBus>
       </Rebus>
     </Messaging>
-    <services>
-      <configurator type="Foundation.HtmlCache.Messaging.Subscription.ServicesConfigurator, Foundation.HtmlCache" role:require="Standalone or ContentDelivery"/>
-    </services>
   </sitecore>
 </configuration>
