Message queue integration seems to be working now.

--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -1,5 +1,6 @@
 ﻿<configuration xmlns:patch="http://www.sitecore.net/xmlconfig/" xmlns:role="http://www.sitecore.net/xmlconfig/role/" xmlns:messagingTransport="http://www.sitecore.net/xmlconfig/messagingTransport/">
-  <sitecore role:require="Standalone or ContentManagement or ContentDelivery" messagingTransport:require="SQL">
+  <sitecore role:require="Standalone or ContentManagement or ContentDelivery">
+    <sc.variable name="HtmlCacheQueueSubscriberPostfix" value="" />
     <commands role:require="Standalone or ContentManagement">
       <command name="cache:SiteClearCacheCommand" type="Foundation.HtmlCache.Commands.SiteClearCacheCommand,Foundation.HtmlCache"/>
       <command name="cache:SiteClearCacheAllLanguagesCommand" type="Foundation.HtmlCache.Commands.SiteClearCacheAllLanguagesCommand,Foundation.HtmlCache"/>
@@ -91,33 +92,28 @@
               <OneWay role:require="ContentManagement">true</OneWay>
               <ConnectionStringOrName>messaging</ConnectionStringOrName>
               <Mode>Standard</Mode>
-              <InputQueueName>HtmlCacheQueue_Subscriber</InputQueueName>
+              <InputQueueName>HtmlCacheQueue_${Application}</InputQueueName>
             </AzureServiceBus>
             <SqlServer messagingTransport:require="SQL">
               <OneWay role:require="Standalone or ContentDelivery">false</OneWay>
               <OneWay role:require="ContentManagement">true</OneWay>
               <ConnectionStringOrName>messaging</ConnectionStringOrName>
-              <InputQueueName>HtmlCacheQueue_Subscriber</InputQueueName>
+              <InputQueueName role:require="Standalone or ContentDelivery">HtmlCacheQueue_$(HtmlCacheQueueSubscriberPostfix)</InputQueueName>
             </SqlServer>
           </Transport>
-
           <Subscriptions>
             <SqlServer>
-              <!--Set of credentials for proper connection to database-->
               <ConnectionStringOrName>messaging</ConnectionStringOrName>
-              <!--The name of the table which saves the information about the relationships between queues and messages-->
               <TableName>Sitecore_Subscriptions</TableName>
-              <!--Means that both subscribers and publishers have access to the same central subscription storage-->
               <IsCentralized>true</IsCentralized>
               <RetryerName>ExponentialRetryer</RetryerName>
             </SqlServer>
           </Subscriptions>
-
           <Subscribers role:require="Standalone or ContentDelivery">
             <TypeMappings>
               <BroadcastHtmlCacheMapping>
                 <Type>Foundation.HtmlCache.Messaging.Message.BroadcastHtmlCacheMessage, Foundation.HtmlCache</Type>
-                <PublisherQueue>HtmlCacheQueue_Subscriber</PublisherQueue>
+                <PublisherQueue>HtmlCacheQueue</PublisherQueue>
               </BroadcastHtmlCacheMapping>
             </TypeMappings>
           </Subscribers>
