Basic test with Azure Service Bus complete.

--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -92,7 +92,7 @@
               <OneWay role:require="ContentManagement">true</OneWay>
               <ConnectionStringOrName>messaging</ConnectionStringOrName>
               <Mode>Standard</Mode>
-              <InputQueueName>HtmlCacheQueue_${Application}</InputQueueName>
+              <InputQueueName>HtmlCacheQueue_$(HtmlCacheQueueSubscriberPostfix)</InputQueueName>
             </AzureServiceBus>
             <SqlServer messagingTransport:require="SQL">
               <OneWay role:require="Standalone or ContentDelivery">false</OneWay>
@@ -101,7 +101,7 @@
               <InputQueueName role:require="Standalone or ContentDelivery">HtmlCacheQueue_$(HtmlCacheQueueSubscriberPostfix)</InputQueueName>
             </SqlServer>
           </Transport>
-          <Subscriptions>
+          <Subscriptions messagingTransport:require="SQL">
             <SqlServer>
               <ConnectionStringOrName>messaging</ConnectionStringOrName>
               <TableName>Sitecore_Subscriptions</TableName>
