--- a/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
+++ b/code/App_Config/Include/zFoundation/zFoundation.HtmlCache.config
@@ -7,49 +7,38 @@
       <command name="cache:SiteClearCacheAllSitesCommand" type="Foundation.HtmlCache.Commands.SiteClearCacheAllSitesCommand,Foundation.HtmlCache"/>
     </commands>
     <settings>
-      <!-- This setting contains all common templates that should be tracked across multiple renderings such as images, pdfs etc.-->
-      <setting name="GlobalCacheableTemplateIDs" value=""/>
+      <!-- This setting contains all common templates that should be tracked across multiple renderings such as images, pdfs etc. (pipe seperated IDs)-->
+      <setting name="GlobalCacheableTemplateIDs" value="{F1828A2C-7E5D-4BBD-98CA-320474871548}|{DAF085E8-602E-43A6-8299-038FF171349F}|{E76ADBDF-87D1-4FCB-BA71-274F7DBF5670}"/>
+		<!-- This assumes that all custom templates are in a specific folder in Foundation, Feature, and Project Respectively (pipe seperated paths)-->
+      <setting name="CustomCacheableTemplatePaths" value=""/>
     </settings>
     <pipelines>
       <initialize>
         <processor type="Foundation.HtmlCache.Pipelines.InitializePersistedHtmlCache, Foundation.HtmlCache" method="Initialize" role:require="Standalone or ContentDelivery" />
+        <processor type="Foundation.HtmlCache.Pipelines.InitialiseGlobalTemplateList, Foundation.HtmlCache" method="Initialize" role:require="Standalone or ContentDelivery" />
         <processor type="Foundation.HtmlCache.Pipelines.InitializeServiceBus, Foundation.HtmlCache" resolve="true" />
       </initialize>
       <mvc.requestBegin>
-        <processor
-          type="Foundation.HtmlCache.Pipelines.BeginTrackingContext, Foundation.HtmlCache"
-          patch:after="processor[@type='Sitecore.ContentTesting.Mvc.Pipelines.Response.RequestBegin.EvaluateTestExposure, Sitecore.ContentTesting.Mvc']" role:require="Standalone or ContentDelivery" />
+        <processor type="Foundation.HtmlCache.Pipelines.BeginTrackingContext, Foundation.HtmlCache" patch:after="processor[@type='Sitecore.ContentTesting.Mvc.Pipelines.Response.RequestBegin.EvaluateTestExposure, Sitecore.ContentTesting.Mvc']" role:require="Standalone or ContentDelivery" />
       </mvc.requestBegin>
       <mvc.renderRendering>
-        <processor
-          type="Foundation.HtmlCache.Pipelines.BeginRenderingContext, Foundation.HtmlCache"
-          patch:after="processor[@type='Sitecore.Mvc.Pipelines.Response.RenderRendering.RenderFromCache, Sitecore.Mvc']" role:require="Standalone or ContentDelivery" />
-        <processor
-          type="Foundation.HtmlCache.Pipelines.EndRenderingContext, Foundation.HtmlCache"
-          patch:before="processor[@type='Foundation.HtmlCache.Pipelines.SaveToPersistantCache, Foundation.HtmlCache']" role:require="Standalone or ContentDelivery" />
+        <processor type="Foundation.HtmlCache.Pipelines.BeginRenderingContext, Foundation.HtmlCache" patch:after="processor[@type='Sitecore.Mvc.Pipelines.Response.RenderRendering.RenderFromCache, Sitecore.Mvc']" role:require="Standalone or ContentDelivery" />
+        <processor type="Foundation.HtmlCache.Pipelines.EndRenderingContext, Foundation.HtmlCache" patch:before="processor[@type='Foundation.HtmlCache.Pipelines.SaveToPersistantCache, Foundation.HtmlCache']" role:require="Standalone or ContentDelivery" />
       </mvc.renderRendering>
       <mvc.requestEnd>
-        <processor
-          type="Foundation.HtmlCache.Pipelines.EndTrackingContext, Foundation.HtmlCache"
-          patch:after="processor[@type='Sitecore.Mvc.ExperienceEditor.Pipelines.Request.RequestEnd.AddPageExtenders, Sitecore.Mvc.ExperienceEditor']" role:require="Standalone or ContentDelivery" />
-        <processor
-          type="Foundation.HtmlCache.Pipelines.SaveToPersistantCache, Foundation.HtmlCache"
-          patch:after="processor[@type='Foundation.HtmlCache.Pipelines.EndTrackingContext, Foundation.HtmlCache']" role:require="Standalone or ContentDelivery" />
-        <processor
-          type="Foundation.HtmlCache.Pipelines.BroadcastHtmlCache, Foundation.HtmlCache"
-          patch:after="processor[@type='Foundation.HtmlCache.Pipelines.SaveToPersistantCache, Foundation.HtmlCache']" role:require="Standalone or ContentDelivery" />
+        <processor type="Foundation.HtmlCache.Pipelines.EndTrackingContext, Foundation.HtmlCache" patch:after="processor[@type='Sitecore.Mvc.ExperienceEditor.Pipelines.Request.RequestEnd.AddPageExtenders, Sitecore.Mvc.ExperienceEditor']" role:require="Standalone or ContentDelivery" />
+        <processor type="Foundation.HtmlCache.Pipelines.SaveToPersistantCache, Foundation.HtmlCache" patch:after="processor[@type='Foundation.HtmlCache.Pipelines.EndTrackingContext, Foundation.HtmlCache']" role:require="Standalone or ContentDelivery" />
+        <processor type="Foundation.HtmlCache.Pipelines.BroadcastHtmlCache, Foundation.HtmlCache" patch:after="processor[@type='Foundation.HtmlCache.Pipelines.SaveToPersistantCache, Foundation.HtmlCache']" role:require="Standalone or ContentDelivery" />
       </mvc.requestEnd>
       <group name="itemProvider" groupName="itemProvider">
         <pipelines>
           <getItem>
-            <processor
-              type="Foundation.HtmlCache.Providers.TrackItemAccess, Foundation.HtmlCache"
-              patch:after="processor[@type='Sitecore.ContentTesting.Pipelines.ItemProvider.GetItem.GetItemUnderTestProcessor, Sitecore.ContentTesting']" role:require="Standalone or ContentDelivery" />
+            <processor type="Foundation.HtmlCache.Providers.TrackItemAccess, Foundation.HtmlCache" patch:after="processor[@type='Sitecore.ContentTesting.Pipelines.ItemProvider.GetItem.GetItemUnderTestProcessor, Sitecore.ContentTesting']" role:require="Standalone or ContentDelivery" />
           </getItem>
         </pipelines>
       </group>
     </pipelines>
-    <events>
+	<events>
       <event name="publish:begin">
         <handler type="Foundation.HtmlCache.Events.PublishJobBegin, Foundation.HtmlCache" method="BeginPublishTracking" role:require="Standalone or ContentManagement"/>
       </event>
@@ -80,7 +69,7 @@
     <controlSources>
       <source mode="on" namespace="Foundation.HtmlCache.Controls" assembly="Foundation.HtmlCache" prefix="Foundation.HtmlCache"/>
     </controlSources>
-    <services>
+	<services>
       <register serviceType="Sitecore.Framework.Messaging.IMessageHandler`1[[Foundation.HtmlCache.Messaging.Message.BroadcastHtmlCacheMessage, Foundation.HtmlCache]], Sitecore.Framework.Messaging.Abstractions" implementationType="Foundation.HtmlCache.Messaging.Handlers.BroadcastHtmlCacheHandler, Foundation.HtmlCache" lifetime="Transient" />
     </services>
     <Messaging>
